--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                     </div>
                     
                     <div class="mobile-only-cta">
-                        <a href="tel:*334*2*1*0748052811%23" class="btn btn-primary btn-large">
+                        <a href="tel:*334%23" class="btn btn-primary btn-large">
                             <i class="fas fa-mobile-alt"></i> Open M-Pesa Menu
                         </a>
                         <p class="small-text mt-1">(Mobile only: Dials *334# to Send Money)</p>
@@ -347,7 +347,7 @@
                     <div class="manual-payment">
                         <p><strong>Send Money to:</strong></p>
                         <div class="copy-box">
-                            <span id="phone-number">0748052811</span>
+                            <span id="phone-number">No. 0748052811</span>
                             <button onclick="copyNumber()" id="copy-btn" title="Copy to clipboard">
                                 <i class="fas fa-copy"></i> Copy
                             </button>
